--- a/app/assets/stylesheets/pages/_list.scss
+++ b/app/assets/stylesheets/pages/_list.scss
@@ -26,14 +26,6 @@
   width: 50%;
 }
 
-.flex-card-list {
-  margin-top: 32px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5vw;
-  padding-bottom: 100px;
-}
-
 .delete {
   height: 60px;
   padding: 5px;
@@ -81,7 +73,7 @@
   position: fixed;
   bottom: 0;
   right: 0;
-  width: calc(100vw - 350px - 128px);
+  width: calc(100vw - 350px);
   padding-right: 128px;
   gap: 24px;
   background-color: $secondary-color;
@@ -188,7 +180,7 @@ body.dark-mode {
 
 @media screen and (max-width: 1280px) {
   .bottom-list {
-  width: calc(100vw - 30vw - 8vw);
+  width: calc(100vw - 30vw);
   padding-right: 8vw;
 }
   
