--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -210,7 +210,7 @@
       </svg>
     </div>
     <div class="popup-inner">
-      <p class="title-popup">Bêta Omniscient design</p>
+      <p class="title-popup">Omniscient design</p>
       <p>Nous sommes ravis de vous accueillir dans cette phase importante de notre projet. La bêta est une étape cruciale pour tester le site, identifier les améliorations nécessaires et construire une expérience qui répond à vos attentes.</p>
       <div class="popup-decoration">
         <%= image_tag("logo-white.svg", :alt => "logo omniscient design") %>
@@ -222,16 +222,7 @@
       <%= link_to presentation_url, class: "button dark" do %>
         En savoir plus
       <%end%>
-       <p class="subtitle-popup">Informations sur la bêta</p>
-      <p>1. Phase de test <br>
-      Nous testons activement le site. Cela signifie que des bugs ou des erreurs peuvent survenir. Si vous en repérez, n'hésitez pas à nous les signaler.<br><br>
-      2. Mises à jour fréquentes <br>
-      Nous déployons régulièrement des corrections et des nouvelles fonctionnalités. Vous pouvez suivre l'évolution du site grâce à nos notes de mise à jour.<br><br>
-      3. Réinitialisation possible <br>
-      Pendant la bêta, il est possible que certains comptes, listes ou données soient réinitialisés. Nous nous excusons d’avance pour la gêne occasionnée et vous remercions pour votre compréhension.</p>
-        <%= link_to changelog_url, class: "button dark" do %>
-        Voir les mises à jour
-        <%end%>
+     
       <div class="popup-decoration">
         <svg width="186" height="46" viewBox="0 0 186 46" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_3317_340)">
