--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -47,12 +47,12 @@
 .logo-header {
   display: flex;
   align-items: center;
+  gap: 1.5vw;
 }
 
 .name-header {
   font-weight: 500;
   font-size: 1.5rem;
-  margin-left: 1rem;
 }
 
 // Navigation
