--- a/app/assets/stylesheets/pages/_searchpage.scss
+++ b/app/assets/stylesheets/pages/_searchpage.scss
@@ -314,7 +314,7 @@
 .card-designer,
 .card-oeuvre {
   background-repeat: no-repeat;
-  width: 10vw;
+  width: 100%;
   height: 280px;
   border-radius: 10px;
   display: flex;
@@ -428,7 +428,6 @@
 
   .card-designer,
   .card-oeuvre {
-    width: calc(40vw - 20px);
     height: 240px;
     padding: 15px;
   }
@@ -503,7 +502,6 @@
 
   .card-designer,
   .card-oeuvre {
-    width: calc(38vw - 20px);
     height: 240px;
     padding: 15px;
   }
@@ -559,7 +557,6 @@
 
   .card-designer,
   .card-oeuvre {
-    width: calc(38vw - 20px);
     height: 240px;
     padding: 15px;
   }
@@ -591,7 +588,6 @@
 
   .card-designer,
   .card-oeuvre {
-    width: calc(24vw - 20px);
     height: 240px;
     padding: 15px;
   }
@@ -624,7 +620,6 @@
 
   .card-designer,
   .card-oeuvre {
-    width: calc(24vw - 36px);
     height: 260px;
     padding: 15px;
   }
