--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,9 @@
     <%= render 'application/favicon' %>
 
     <!-- Stylesheets -->
+    <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
+
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script> <!-- Ajout du defer -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" 
@@ -76,6 +78,7 @@
       gtag('config', 'G-WVD06EPJC3');
     </script>
     <% end %>
+
   </head>
 
   <% theme = cookies&.[](:theme).presence || 'light-mode' %>
