--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -126,7 +126,7 @@
     <div class="flex-title-list">
       <h2>Tout</h2>
     </div>
-    <div class="flex-card-list">
+<div class="grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 py-6 mt-4">
       <% (@list.designers + @list.oeuvres).sort_by { |item| item.is_a?(Oeuvre) ? item.nom_oeuvre.downcase : item.nom.downcase }.each do |item| %>
         <% if item.is_a?(Designer) %>
           <%= render 'designers/designer_card', designer: item %>
@@ -140,7 +140,7 @@
     <div class="flex-title-list">
       <h2>Les références</h2>
     </div>
-    <div class="flex-card-list">
+<div class="grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 py-6 mt-4">
       <% @list.oeuvres.each do |oeuvre| %>
       <%= render 'oeuvres/oeuvre_card', oeuvre: oeuvre %>
       <% end %>
@@ -150,7 +150,7 @@
       <div class="flex-title-list">
       <h2>Les designers </h2>
     </div>
-    <div class="flex-card-list">
+<div class="grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 py-6 mt-4">
       <% @list.designers.each do |designer| %>
         <%= render 'designers/designer_card', designer: designer %>
       <% end %>
